@@ -60,7 +60,7 @@ function S4EDownloadService(window, service, getters)
 	let supportsJSTransfer = false;
 	try
 	{
-		supportsJSTransfer = (Services.vc.compare("25.*", Services.appinfo.version) < 0);
+		supportsJSTransfer = (Services.vc.compare("25.0", Services.appinfo.version) <= 0);
 	} catch(e) {}
 
 	let tryJSTransfer = true;
@@ -433,7 +433,16 @@ S4EDownloadService.prototype =
 
 		switch(this._service.downloadButtonAction)
 		{
-			case 1: // Default
+			case 1: // Show Panel
+				this._window.DownloadsPanel.showPanel();
+				break;
+			case 2: // Show Library
+				this._window.PlacesCommandHook.showPlacesOrganizer("Downloads");
+				break;
+			case 3: // Show Classic
+				DownloadManagerUIClassic.show(this._window);
+				break;
+			case 4: // Firefox Default
 				if(this._window.DownloadsCommon.useToolkitUI)
 				{
 					DownloadManagerUIClassic.show(this._window);
@@ -442,15 +451,6 @@ S4EDownloadService.prototype =
 				{
 					this._window.DownloadsPanel.showPanel();
 				}
-				break;
-			case 2: // Show Panel
-				this._window.DownloadsPanel.showPanel();
-				break;
-			case 3: // Show Library
-				this._window.PlacesCommandHook.showPlacesOrganizer("Downloads");
-				break;
-			case 4: // Show Classic
-				DownloadManagerUIClassic.show(this._window);
 				break;
 			default: // Nothing
 				break;
@@ -468,18 +468,9 @@ S4EDownloadService.prototype =
 	{
 		switch(this._service.downloadButtonAction)
 		{
-			case 1: // Default
-				if(this._window.DownloadsCommon.useToolkitUI)
-				{
-					return DownloadManagerUIClassic.visible;
-				}
-				else
-				{
-					return this._window.DownloadsPanel.isPanelShowing;
-				}
-			case 2: // Show Panel
+			case 1: // Show Panel
 				return this._window.DownloadsPanel.isPanelShowing;
-			case 3: // Show Library
+			case 2: // Show Library
 				var organizer = Services.wm.getMostRecentWindow("Places:Organizer");
 				if(organizer)
 				{
@@ -488,8 +479,17 @@ S4EDownloadService.prototype =
 					return selectedNode && selectedNode.itemId === downloadsItemId;
 				}
 				return false;
-			case 4: // Show Classic
+			case 3: // Show Classic
 				return DownloadManagerUIClassic.visible;
+			case 4: // Firefox Default
+				if(this._window.DownloadsCommon.useToolkitUI)
+				{
+					return DownloadManagerUIClassic.visible;
+				}
+				else
+				{
+					return this._window.DownloadsPanel.isPanelShowing;
+				}
 			default: // Nothing
 				return false;
 		}
