@@ -1,5 +1,7 @@
 Version next
 * Initial Australis support.
+* Drop support for Firefox 23.0 and older.
+* Classic download manager is not available in Firefox 26.0 and newer.
 
 Version 2013.10.31.22
 * Updated translations for: es-ES, he
